# otus-cpp

./: .clang-format  .clang-tidy  .cmake-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  alloc_8cpp.html  alloc_8cpp__incl.map  alloc_8cpp__incl.md5  alloc_8hpp.html  alloc_8hpp__dep__incl.map  alloc_8hpp__dep__incl.md5  alloc_8hpp__incl.map  alloc_8hpp__incl.md5  alloc_8hpp_source.html  annotated.html  better__alloc_8hpp.html  better__alloc_8hpp__dep__incl.map  better__alloc_8hpp__dep__incl.md5  better__alloc_8hpp__incl.map  better__alloc_8hpp__incl.md5  better__alloc_8hpp_source.html  classAlloc-members.html  classAlloc.html  classAnotherVector-members.html  classAnotherVector.html  classAnotherVector_1_1AnotherVectorIter-members.html  classAnotherVector_1_1AnotherVectorIter.html  classAnotherVector_1_1AnotherVectorIter_a203ba3834ab9ffaaac0cc1b92ae38c48_icgraph.map  classAnotherVector_1_1AnotherVectorIter_a203ba3834ab9ffaaac0cc1b92ae38c48_icgraph.md5  classAnotherVector_1_1AnotherVectorIter_a40a4551290af339608a204bd3ef6cf32_cgraph.map  classAnotherVector_1_1AnotherVectorIter_a40a4551290af339608a204bd3ef6cf32_cgraph.md5  classAnotherVector_1_1AnotherVectorIter_ac738999b0c621114c8894149f9118e56_cgraph.map  classAnotherVector_1_1AnotherVectorIter_ac738999b0c621114c8894149f9118e56_cgraph.md5  classAnotherVector_a1236f4cd6b33b29a692b45db491714d0_icgraph.map  classAnotherVector_a1236f4cd6b33b29a692b45db491714d0_icgraph.md5  (+374 more)
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  static.yml
cmake/: dependencies.cmake
docker/: Dockerfile.chat-service  Dockerfile.dev  Dockerfile.nats
experiments/: CMakeLists.txt  compile_time_list.hpp  high_order_metafunctions.hpp  main.cpp  template_template_templates.hpp  tuple_cast.hpp
githooks/: pre-commit
otus_hws/final_project/: CMakeLists.txt  README.md
otus_hws/final_project/include/: chat_room.hpp  client.hpp  client_options.hpp  command_parser.hpp  network_handler.hpp  server.hpp  server_options.hpp  service.hpp  service_handler.hpp  session.hpp  transport_interface.hpp  user_manager.hpp
otus_hws/final_project/proto/: schema.proto
otus_hws/final_project/src/: chat_room.cpp  client.cpp  client_main.cpp  command_parser.cpp  network_session.cpp  server.cpp  server_main.cpp  service.cpp  session.cpp  session_impl.cpp  user_manager.cpp
otus_hws/final_project/tests/: test_in_memory_server.cpp  test_integrational.cpp  test_server.cpp
otus_hws/hw1/: CMakeLists.txt
otus_hws/hw1/src/: lib.cpp  main.cpp
otus_hws/hw10/: CMakeLists.txt  README.md
otus_hws/hw10/include/: async.hpp  async_parser.hpp  core.hpp  generator.hpp  manager.hpp  parser.hpp
otus_hws/hw10/src/: bulk_client.cpp  bulk_server.cpp
otus_hws/hw11/: CMakeLists.txt
otus_hws/hw11/include/: in_memory_sql.hpp
otus_hws/hw11/src/: in_memory_server.cpp  in_memory_sql.cpp
otus_hws/hw12/: CMakeLists.txt  run_mapreducer.sh
otus_hws/hw12/assets/: reduced_sample.csv
otus_hws/hw12/include/: options.hpp
otus_hws/hw12/src/: mapper.cpp  reducer.cpp
otus_hws/hw13/: CMakeLists.txt  README.md
otus_hws/hw13/include/: model.hpp  models.hpp
otus_hws/hw13/src/: main.cpp
otus_hws/hw2/: CMakeLists.txt
otus_hws/hw2/assets/: ip_filter_sample.tsv
otus_hws/hw2/include/: ip_filter.hpp
otus_hws/hw2/src/: ip_filter.cpp  main.cpp
otus_hws/hw2/tests/: test_filter.cpp
otus_hws/hw3/: CMakeLists.txt
otus_hws/hw3/include/: alloc.hpp  better_alloc.hpp  not_even_vector.hpp
otus_hws/hw3/src/: alloc.cpp  main.cpp
otus_hws/hw3/tests/: test_alloc.cpp
otus_hws/hw4/: CMakeLists.txt
otus_hws/hw4/include/: ip_printer.hpp
otus_hws/hw4/src/: ip_printer.cpp  main.cpp
otus_hws/hw5/: CMakeLists.txt
otus_hws/hw5/include/: controller.hpp  editor.hpp  model.hpp  view.hpp
otus_hws/hw5/schemas/: shapes.fbs
otus_hws/hw5/src/: main.cpp
otus_hws/hw5/tests/: test_editor.cpp
otus_hws/hw6/: CMakeLists.txt
otus_hws/hw6/include/: matrix.hpp
otus_hws/hw6/src/: main.cpp
otus_hws/hw6/tests/: test_matrix.cpp
otus_hws/hw7/: CMakeLists.txt
otus_hws/hw7/include/: bulk.hpp  command_parser.hpp  coroutine_bulk.hpp  coroutine_command_parser.hpp
otus_hws/hw7/src/: bulk.cpp  command_parser.cpp  main.cpp
otus_hws/hw7/tests/: test_bulk.cpp  test_command_parser.cpp
otus_hws/hw8/: CMakeLists.txt  README.md
otus_hws/hw8/assets/some_dir/: boo2.txt
otus_hws/hw8/assets/some_dir/some_dir1/: unique.txt
otus_hws/hw8/include/: bayan.hpp  duplicate_searcher.hpp  file_handler.hpp  hasher.hpp
otus_hws/hw8/src/: bayan.cpp  duplicate_searcher.cpp  main.cpp
otus_hws/hw8/tests/: test_duplicate_searcher.cpp
otus_hws/hw9/: CMakeLists.txt
otus_hws/hw9/include/: async.hpp  parser.hpp  sinks.hpp  utils.hpp
otus_hws/hw9/src/: main.cpp  manager.cpp
problems/: CMakeLists.txt  hw3.hpp  hw4.hpp  hw5.hpp  hw6.hpp  main.cpp  p1264.hpp  p1409.hpp  p1787.hpp  p1877.hpp  p2001.hpp
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  concepts_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  (+25 more)
